# codez

./: Cargo.toml  README.md
data/: ble.toml  curl.toml  docker.toml  errno.toml  exit.toml  git.toml  http.toml  le_audio.toml  podman.toml  rust.toml
docs/superpowers/plans/: 2026-06-22-codez.md
docs/superpowers/specs/: 2026-06-22-codez-design.md
src/: app.rs  main.rs  model.rs  plain.rs  theme.rs  tui.rs
