[package]
name = "codez"
version = "0.1.0"
edition = "2021"
description = "Interactive terminal dictionary of status and error codes"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
